--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
             <version>6.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    <groupId>org.apache.ant</groupId>
+    <artifactId>ant</artifactId>
+    <version>1.9.4</version>
+</dependency>
 
         <!-- XML apis -->
         <dependency>
